# pycofhe

./: .clang-format  .env.example  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  pyproject.toml
docs/source/: conf.py  index.rst
docs/source/_templates/: custom-class-template.rst
examples/cov_token_demo_cli_app/: .gitignore  README.md  pyproject.toml
examples/cov_token_demo_cli_app/artifacts/: abi.json  example_config.json
examples/cov_token_demo_cli_app/artifacts/pycofhe_dist/: pycofhe-0.1.0-cp311-cp311-linux_x86_64.whl
examples/cov_token_demo_cli_app/src/cov_token_demo_cli_app/: __init__.py  cov_token.py
include/pycofhe/tensor/: tensor_pyb.hpp
src/cpu_cryptosystem/: cpu_cryptosystem_pyb.cpp
src/network/: binary_cpu_cryptosystem_pyb.cpp  binary_cryptosystem_pyb.cpp  client_node_pyb.cpp  compute_request_response_pyb.cpp  native_transfer_func_pyb.cpp  network_details_pyb.cpp  networking_pyb.cpp  reencryptor_pyb.cpp  request_response_pyb.cpp  setup_request_response_pyb.cpp
src/pycofhe/: __init__.py
src/pycofhe/cpu_cryptosystem/: __init__.py  cpu_cryptosystem_core.pyi
src/pycofhe/cryptosystems/: __init__.py  cpu_cryptosystem_core.pyi  cryptosystem.pyi
src/pycofhe/network/: __init__.py  binary_scheme_core.pyi  compute_request_response.pyi  native_transfer_func.pyi  network_core.pyi  network_details.pyi  reencryptor.pyi  request_response.pyi  setup_node_request_response.pyi  utils.py
src/pycofhe/nn/: __init__.py  functional.py  tensor_type.py
src/pycofhe/nn/modules/: __init__.py  linear.py  module.py
src/pycofhe/tensor/: __init__.py  tensor_core.pyi
src/pycofhe/utils/: __init__.py  scaling.py
src/tensor/: tensor_pyb.cpp
test/: conftest.py  test_binary_cpu_cryptosystem.py  test_cpu_cryptosystem.py  test_cpu_cryptosystem_client_node.py  test_native_transfer_func.py  test_network_util_funcs.py  test_nn.py  test_reencryption.py  test_tensor.py
